# github-webhook

./: .env.example  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: ci-rust.yml
src/: cli.rs  github.rs  main.rs
src/core/: common.rs  github.rs  gitlab.rs  mod.rs
