[package]
name = "github-webhook"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
openssl = "0.10"
dotenvy = "0.15"
hex = "0.4.3"
