[package]
name = "github-webhook"
version = "0.2.3"
edition = "2024"
rust-version = "1.89"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
openssl = "0.10"
dotenvy = "0.15"
hex = "0.4.3"
clap = { version = "4.5.47", features = ["derive"] }
